examples/bad/local_var.ypl
fun(): {
    a=5;
    out(a);
}

main(): {
    local a=5;
    fun();
    out(a);
}